[TG-34] fix: fixed data races. Params in repos and some tests.