@@ -23,7 +23,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.doThrow;
@@ -55,7 +55,7 @@ class UserControllerTest {
     @Test
     @DisplayName("GET /api/v1/users - Retorna lista vacía o llena (OK)")
     void getAll_ReturnsList() throws Exception {
-        when(userService.getAllUsers()).thenReturn(Arrays.asList(new UserResponseDTO()));
+        when(userService.getAllUsers()).thenReturn(List.of(new UserResponseDTO()));
 
         mockMvc.perform(get("/api/v1/users"))
                 .andExpect(status().isOk())
@@ -232,9 +232,11 @@ class UserControllerTest {
 
         when(userService.openPrize("googleId")).thenReturn(p);
 
-        mockMvc.perform(get("/api/v1/users/googleId/open-prize")
-                        .param("lang", "en"))
-                .andExpect(status().isOk());
+        mockMvc.perform(get("/api/v1/users/googleId/open-prize"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.id").value("prize-123"))
+                .andExpect(jsonPath("$.url").value("http://example.com/prize.png"));
     }
 
     // --- HELPER METHOD ---
